// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edits an existing file correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="bg-lightGrey"
    >
      <section
        class="grid-container mx-auto grid-container--collapsed-rows StudyHeader py-8 px-12"
      >
        <p
          class="StudyHeader--TopText"
        >
          <b>
            SD_8WX8QQ06
          </b>
          <button
            class="ui icon left labeled button pl-4 pr-20"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
          <small
            class="font-light"
          >
            last updated: 
            <time
              datetime="2019-04-25T15:22:18.780Z"
              title="2019-04-25T15:22:18.780221+00:00"
            >
              2 days from now
            </time>
          </small>
        </p>
        <p
          class="StudyHeader--TitleText row-3 cell-12 md:row-2 md:cell-10"
        >
          benchmark extensible e-business
        </p>
        <div
          class="hidden row-2 cell-12 md:cell-2 md:flex-row md:flex-col"
        >
          <p
            class="m-0 text-sm font-bold inline-block pr-8"
          >
            Contacts:
          </p>
          <p
            class="m-0 font-light inline-block"
          >
            Mary Marazita
          </p>
        </div>
      </section>
    </div>
    <div
      class="border-b-2 .border-mediumGrey"
    >
      <section
        class="grid-container mx-auto px-12"
      >
        <nav
          class="SecondaryNav border-none cell-12"
        >
          <ul
            class="SecondaryNav--list"
          >
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/basicInfo"
              >
                Basic Info
              </a>
            </li>
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/dashboard"
              >
                Dashboard
              </a>
            </li>
            <li
              class="SecondaryNav--link SecondaryNav--link-active"
            >
              <a
                aria-current="page"
                class="active"
                href="/study/SD_8WX8QQ06/documents"
              >
                Documents
              </a>
            </li>
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/collaborators"
              >
                Collaborators
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </section>
  <div
    class="ui container"
    style="margin-top: 30px;"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic icon left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              Back to All Documents
            </button>
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui header"
          >
            organization.jpeg
            <div
              class="ui mini icon labeled right floated buttons"
            >
              <button
                class="ui button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui button"
              >
                <i
                  aria-hidden="true"
                  class="download icon"
                />
                DOWNLOAD
              </button>
              <button
                class="ui negative button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
                DELETE
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Status
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui orange tiny basic label"
              >
                Pending Review
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Document Type
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny basic label"
              >
                <i
                  aria-hidden="true"
                  class="hospital icon"
                />
                 Clinical/Phenotype Data
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Last Updated
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny image label"
                style="text-wrap: no;"
              >
                <img
                  alt="xuzhu"
                  src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                />
                xuzhu
                <div
                  class="detail"
                >
                  <time
                    datetime="2018-09-27T05:32:26.000Z"
                    title="2018-09-27T05:32:26+00:00"
                  >
                    7 months ago
                  </time>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Size
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny basic label"
              >
                5.5 kB
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui small header"
          >
            Description
          </div>
          Month necessary animal end standard case. View system operation message decade. Actually sing because deal everything woman subject.
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui segment"
            style="padding: 0px;"
          >
            <div
              class="ui divided selection relaxed list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <h4
                  class="header"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui orange mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui purple mini tag label"
                  >
                    LATEST
                  </div>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_DMTKEFQW
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui orange mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_TT8NF09R
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui orange mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_2WV3VNJN
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edits an existing file correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="bg-lightGrey"
    >
      <section
        class="grid-container mx-auto grid-container--collapsed-rows StudyHeader py-8 px-12"
      >
        <p
          class="StudyHeader--TopText"
        >
          <b>
            SD_8WX8QQ06
          </b>
          <button
            class="ui icon left labeled button pl-4 pr-20"
          >
            <i
              aria-hidden="true"
              class="copy icon"
            />
            SD_8WX8QQ06
          </button>
          <small
            class="font-light"
          >
            last updated: 
            <time
              datetime="2019-04-25T15:22:18.780Z"
              title="2019-04-25T15:22:18.780221+00:00"
            >
              2 days from now
            </time>
          </small>
        </p>
        <p
          class="StudyHeader--TitleText row-3 cell-12 md:row-2 md:cell-10"
        >
          benchmark extensible e-business
        </p>
        <div
          class="hidden row-2 cell-12 md:cell-2 md:flex-row md:flex-col"
        >
          <p
            class="m-0 text-sm font-bold inline-block pr-8"
          >
            Contacts:
          </p>
          <p
            class="m-0 font-light inline-block"
          >
            Mary Marazita
          </p>
        </div>
      </section>
    </div>
    <div
      class="border-b-2 .border-mediumGrey"
    >
      <section
        class="grid-container mx-auto px-12"
      >
        <nav
          class="SecondaryNav border-none cell-12"
        >
          <ul
            class="SecondaryNav--list"
          >
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/basicInfo"
              >
                Basic Info
              </a>
            </li>
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/dashboard"
              >
                Dashboard
              </a>
            </li>
            <li
              class="SecondaryNav--link SecondaryNav--link-active"
            >
              <a
                aria-current="page"
                class="active"
                href="/study/SD_8WX8QQ06/documents"
              >
                Documents
              </a>
            </li>
            <li
              class="SecondaryNav--link"
            >
              <a
                href="/study/SD_8WX8QQ06/collaborators"
              >
                Collaborators
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </section>
  <div
    class="ui container"
    style="margin-top: 30px;"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic icon left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              Back to All Documents
            </button>
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui header"
          >
            mynewfile.txt
            <div
              class="ui mini icon labeled right floated buttons"
            >
              <button
                class="ui button"
                data-testid="edit-button"
              >
                <i
                  aria-hidden="true"
                  class="pencil icon"
                />
                EDIT
              </button>
              <button
                class="ui button"
              >
                <i
                  aria-hidden="true"
                  class="download icon"
                />
                DOWNLOAD
              </button>
              <button
                class="ui negative button"
              >
                <i
                  aria-hidden="true"
                  class="trash alternate icon"
                />
                DELETE
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Status
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui teal tiny basic label"
              >
                Approved
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Document Type
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny basic label"
              >
                <i
                  aria-hidden="true"
                  class="hospital icon"
                />
                 Clinical/Phenotype Data
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Last Updated
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny image label"
                style="text-wrap: no;"
              >
                <img
                  alt="xuzhu"
                  src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                />
                xuzhu
                <div
                  class="detail"
                >
                  <time
                    datetime="2018-09-27T05:32:26.000Z"
                    title="2018-09-27T05:32:26+00:00"
                  >
                    7 months ago
                  </time>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <div
            class="ui mini statistic"
          >
            <div
              class="label"
              style="text-align: left;"
            >
              Size
            </div>
            <div
              class="value"
              style="text-align: left;"
            >
              <div
                class="ui tiny basic label"
              >
                5.5 kB
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui small header"
          >
            Description
          </div>
          Some description here
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="column"
        >
          <div
            class="ui segment"
            style="padding: 0px;"
          >
            <div
              class="ui divided selection relaxed list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <h4
                  class="header"
                >
                  Document Versions (
                  3
                  )
                  <button
                    class="ui mini icon primary right floated left labeled button"
                  >
                    <i
                      aria-hidden="true"
                      class="cloud upload icon"
                    />
                    UPLOAD VERSION
                  </button>
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui teal mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui purple mini tag label"
                  >
                    LATEST
                  </div>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_DMTKEFQW
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui orange mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_TT8NF09R
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui orange mini circular empty label"
                    style="margin-right: 15px;"
                  />
                  <button
                    class="ui header"
                    style="display: inline-block; font-size: 16px; padding-right: 20px;"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button"
                    style="padding-top: 7px; padding-bottom: 7px; font-size: 10px; margin-left: 2px;"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_2WV3VNJN
                  </button>
                  <p
                    data-testid="version-item"
                    style="margin-top: 4px; margin-left: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; font-size: 12px;"
                  >
                    <b>
                      Change Summary: 
                    </b>
                    version description
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
